--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ nav .links ul li a:hover{
     justify-content: center;
     
 }
+
 .searchArea .searchBox input{
     width: 80%;
     padding: 10px;
@@ -211,6 +212,45 @@ nav .links ul li a:hover{
     background-color: rgb(0, 0, 0);
     color: aliceblue;
     border-left: none;
+}
+
+.sh_reslt_cover{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search_reslult_box{
+    background-color: rgb(253, 253, 253);
+    width: 80%;
+    position: relative;
+    right: 50px;
+    top: -30px;
+}
+.search_reslult_box ul{
+    list-style: none;
+}
+.search_reslult_box ul li{
+    /* padding: 5px; */
+}
+.search_reslult_box ul a{
+    color: #000000;
+    text-decoration: none;
+}
+.search_reslult_box ul li:hover{
+    background-color: rgb(229, 227, 224);
+}
+.search_reslult_box .imojiCll{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+ 
+}
+.search_reslult_box .imojiCll span{
+    font-size: 35px;
+    
 }
 @keyframes color{
     0%{
@@ -389,16 +429,26 @@ nav .links ul li a:hover{
     padding: 5px;
 }
 .wpapper .disCover .display1 .displyBoder .display button{
-    width: 80px;
-    height: 45px;
-    border: none;
-    margin: 0 0  0 2px;
-    background-color: rgb(255, 226, 39);
-    color: #000000;
     font-size: 17px;
     font-weight: 500;
     font-family: 'Dhurjati', sans-serif;
 font-family: 'Roboto', sans-serif;
+border: none;
+margin: 0;
+}
+.wpapper .disCover .display1 .displyBoder .display button#cppBtn{
+    width: 80px;
+    height: 45px;
+    background-color: rgb(255, 226, 39);
+    color: #000000;
+padding: 0 5px;
+}
+.wpapper .disCover .display1 .displyBoder .display button#clearSearchBox{
+    width: 60px;
+    height: 45px;
+    background-color: rgb(255, 30, 30);
+    color: #000000;
+color: white;
 }
 .wpapper .disCover .display1 .displyBoder{
     transition: all 1s ease-in-out;
@@ -623,6 +673,7 @@ font-family: 'Roboto', sans-serif;
     }
     .wpapper .disCover .display1 .displyBoder p#copiedMsg{
         width: 80%;
+        padding: 10px;
     }
 }
 .linkBoxCover {
@@ -778,3 +829,4 @@ footer .fuuterBotem{
         width: 95%;
     }
 }
+
