--- a/style.css
+++ b/style.css
@@ -8,9 +8,14 @@
     text-decoration: none;
     
 }
-body{
-    
+.googleAdds{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
+
 
 .flex{
     display: flex;
@@ -540,6 +545,8 @@ color: white;
     padding: 2px;
 }
 
+
+
 @keyframes blink {
     0% {
         background-color: #6f624f
@@ -787,6 +794,7 @@ footer .footerRow .ftlinks a {
 footer .footerRow .ftlinks a:hover{
     color: rgb(243, 243, 0);
 }
+
 @media only screen and (max-width:350px){
     footer .footerRow{
         padding: 5px;
@@ -816,17 +824,16 @@ footer .fuuterBotem{
 }
 .bannerAddCover .bannerBox{
     width: 80%;
-    background-color: #b7b7b7;
+    
 }
 .bannerAddCover .bannerBox .banner{
-    height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #ffffff;
-    font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    flex-wrap: wrap;
+
 }
+
 @media only screen and (max-width:800px){
     .bannerAddCover .bannerBox{
         width: 95%;
