--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@ nav .links ul li a:hover{
     height: 35px;
     font-size: 30px;
     padding: 5px;
-}
+}z
 .wpapper .disCover .display1 .displyBoder .display button{
     font-size: 17px;
     font-weight: 500;
